# e-heed

./: .gitignore  Makefile  pyproject.toml
models/ww/: .gitkeep
src/e_heed/cli/: main.py
src/e_heed/cli/commands/: sentinel.py
tests/unit/: test_cli_sentinel.py
trainer/: adversarial.py  base.ipynb  cli.py  config.py  generate.py  pipeline.py  recorder.py  spec.py  tts.py
